Add punk/pop art dark mode redesign and locale-aware CV downloads
  Dark mode:
  - Neon palette (purple, green, pink, cyan) with CRT scanlines and glitch animations
  - Permanent Marker punk font for section titles and contact CTA
  - MSN chrome on project cards, anime/political stickers
  - Curtain transition overlay on theme toggle with debounce
  - prefers-reduced-motion and prefers-contrast: high support

  CV downloads:
  - Translated CVs for EN and ES locales
  - getCvPath() i18n helper with dynamic links in NavBar, MobileNav, ContactSection

--- a/src/i18n/pt-br.json
+++ b/src/i18n/pt-br.json
@@ -4,7 +4,7 @@
     "projects": "Projetos",
     "certifications": "Certificações",
     "contact": "Contacto",
-    "downloadCv": "Descarregar CV em PDF",
+    "downloadCv": "Baixar CV em PDF",
     "skipToContent": "Saltar para o conteúdo principal",
     "mainNav": "Navegação principal",
     "openMenu": "Abrir menu",
@@ -54,8 +54,8 @@
     "linkedinLabel": "Abrir perfil do LinkedIn (nova janela)",
     "github": "GitHub",
     "githubLabel": "Abrir perfil do GitHub (nova janela)",
-    "downloadCv": "Descarregar CV",
-    "downloadCvLabel": "Descarregar CV em PDF"
+    "downloadCv": "Baixar CV",
+    "downloadCvLabel": "Baixar CV em PDF"
   },
   "footer": {
     "builtWith": "Construído com",
